--- a/_config.yml
+++ b/_config.yml
@@ -8,7 +8,7 @@ description: Allison Howe, LMHC
 # if it's an external image, update below for true
 # better with square images
 external-image: false
-picture: assets/images/profile.jpg
+picture: https://github.com/ahowe444/ahowelmhc/assets/images/profile.jpg
 
 # If you want to include your resume, set to true
 # and specify source (external or local).
