--- a/_config.yml
+++ b/_config.yml
@@ -16,7 +16,7 @@ resume: true
 resume-external: true
 resume-url: assets/PACT2020Resume1.pdf
 
-url: https://ahowe444.github.io/ahowelmhc
+url: https://allisonhowelmhc.com
 # your url: https://USERNAME.github.io
 
 permalink: /:title/
